--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -12,26 +12,35 @@
         android:id="@+id/inputEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:autofillHints="@string/e_mail"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/e_mail"
-        android:autofillHints="@string/e_mail"/>
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/buttonSendEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/inputEmail"
-        android:text="@string/reset_password"/>
+        android:fontFamily="@font/vast_shadow"
+        android:text="@string/reset_password"
+        android:textColor="#6a1b76"
+        android:textStyle="bold"
+        app:backgroundTint="#fde056"
+        app:cornerRadius="10dp" />
 
     <Button
         android:id="@+id/backToLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonSendEmail"
+        android:fontFamily="@font/vast_shadow"
         android:text="@string/back_to_login"
-        android:textColor="#878383"
-        app:backgroundTint="#FFFFFF" />
+        android:textColor="#fde056"
+        android:textStyle="bold"
+        app:backgroundTint="#c687e0"
+        app:cornerRadius="10dp" />
 
 
 </RelativeLayout>
