--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,45 +12,50 @@
             android:id="@+id/editTextFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textCapWords"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="@string/first_name"
             android:hint="@string/first_name"
-            android:autofillHints="@string/first_name"/>
+            android:inputType="textCapWords" />
 
         <EditText
             android:id="@+id/editTextLastName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textCapWords"
-            android:hint="@string/last_name"
+            android:layout_below="@+id/editTextFirstName"
+            android:layout_marginBottom="10dp"
             android:autofillHints="@string/last_name"
-            android:layout_below="@+id/editTextFirstName"/>
+            android:hint="@string/last_name"
+            android:inputType="textCapWords" />
 
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="@string/e_mail"
+            android:layout_below="@+id/editTextLastName"
+            android:layout_marginBottom="10dp"
             android:autofillHints="@string/e_mail"
-            android:layout_below="@+id/editTextLastName"/>
+            android:hint="@string/e_mail"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextEmail"
-            android:inputType="textPassword"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="@string/password"
             android:hint="@string/password"
-            android:autofillHints="@string/password"/>
+            android:inputType="textPassword" />
 
         <EditText
             android:id="@+id/editTextPassword2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextPassword"
-            android:inputType="textPassword"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="@string/password"
             android:hint="@string/password"
-            android:autofillHints="@string/password"/>
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/buttonConfirm"
@@ -58,16 +63,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/editTextPassword2"
             android:layout_alignEnd="@+id/editTextPassword2"
+            android:layout_alignRight="@+id/editTextPassword2"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/register"
-            android:layout_alignRight="@+id/editTextPassword2" />
+            android:textColor=" #6a1b76"
+            android:textStyle="bold"
+            app:backgroundTint="#fee157"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonRedirectToLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/buttonConfirm"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/already_a_member_sign_in"
-            android:textColor="#878383"
-            app:backgroundTint="#FFFFFF" />
+            android:textColor="#6a1b76"
+            android:textSize="9sp"
+            android:textStyle="bold"
+            app:backgroundTint="#FFFFFF"
+            app:cornerRadius="10dp" />
 
 </RelativeLayout>
