--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#D81B60</color>
     <color name="gris_light">#E1DFE1</color>
+    <color name="titanum_yellow">#E9DF00</color>
 </resources>
