--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -12,26 +12,33 @@
         android:id="@+id/inputNewPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:autofillHints="@string/new_password"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="@string/new_password"
-        android:autofillHints="@string/new_password"/>
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/inputNewPasswordConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="@string/confirm_new_password"
+        android:layout_below="@id/inputNewPassword"
+        android:layout_marginBottom="10dp"
         android:autofillHints="@string/confirm_new_password"
-        android:layout_below="@id/inputNewPassword"/>
+        android:ems="10"
+        android:hint="@string/confirm_new_password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/buttonChangePasswordConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/inputNewPasswordConfirm"
-        android:text="@string/change_password"/>
+        android:fontFamily="@font/vast_shadow"
+        android:text="@string/change_password"
+        android:textColor="#6a1b76"
+        android:textStyle="bold"
+        app:backgroundTint="#fde056"
+        app:cornerRadius="10dp" />
 
 </RelativeLayout>
