--- a/app/src/main/res/layout/activity_change_profile_picture.xml
+++ b/app/src/main/res/layout/activity_change_profile_picture.xml
@@ -27,25 +27,45 @@
         android:id="@+id/buttonTakePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/take_picture" />
+        android:fontFamily="@font/vast_shadow"
+        android:text="@string/take_picture"
+        android:textColor="#fee157"
+        android:textStyle="bold"
+        app:backgroundTint="#b74bc2"
+        app:cornerRadius="10dp" />
 
     <Button
         android:id="@+id/buttonChoosePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/choose_picture" />
+        android:fontFamily="@font/vast_shadow"
+        android:text="@string/choose_picture"
+        android:textColor="#fee157"
+        android:textStyle="bold"
+        app:backgroundTint="#c687e0"
+        app:cornerRadius="10dp" />
 
     <Button
         android:id="@+id/buttonSavePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save_picture" />
+        android:fontFamily="@font/vast_shadow"
+        android:text="@string/save_picture"
+        android:textColor="#6a1b76"
+        android:textStyle="bold"
+        app:backgroundTint="#fee157"
+        app:cornerRadius="10dp" />
 
     <Button
         android:id="@+id/buttonDeletePicture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Delete picture" />
+        android:fontFamily="@font/vast_shadow"
+        android:text="Delete picture"
+        android:textColor="#fee157"
+        android:textStyle="bold"
+        app:backgroundTint="#BF0154"
+        app:cornerRadius="10dp" />
 
 
 </LinearLayout>
