--- a/app/src/main/res/layout/activity_edit_pages.xml
+++ b/app/src/main/res/layout/activity_edit_pages.xml
@@ -21,11 +21,16 @@
             android:id="@+id/buttonSavePagesDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/save"
             android:layout_below="@+id/recyclerViewEditPages"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/vast_shadow"
+            android:text="@string/save"
+            android:textColor="#6a1b76"
+            android:textStyle="bold"
+            app:backgroundTint="#fee157"
+            app:cornerRadius="10dp" />
 
     </RelativeLayout>
 
