--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,18 +12,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@null"
-        android:layout_margin="5dp"
-        app:srcCompat="@drawable/ic_baseline_settings_24" />
+        app:srcCompat="@drawable/settings" />
 
     <ImageView
         android:id="@+id/imageButtonProfile"
         android:layout_width="78dp"
         android:layout_height="83dp"
-        android:clickable="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:foreground="@drawable/rounded_frame"/>
+        android:clickable="true"
+        android:foreground="@drawable/rounded_frame" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -31,42 +34,52 @@
         android:layout_centerInParent="true"
         android:layout_margin="50dp">
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonNewPage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/newPage" />
-        <Button
+            android:text="@string/newPage"
+            android:src="@drawable/newpage"
+            android:background="@null"/>
+        <ImageButton
             android:id="@+id/buttonNewPicturebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/newSlikovnica"
-            android:layout_below="@+id/buttonNewPage"/>
+            android:layout_below="@+id/buttonNewPage"
+            android:src="@drawable/newpicturebook"
+            android:background="@null"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonArchive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/archive"
-            android:layout_below="@+id/buttonNewPicturebook"/>
+            android:layout_below="@+id/buttonNewPicturebook"
+            android:src="@drawable/archive"
+            android:background="@null"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonExplore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/explore"
-            android:layout_below="@+id/buttonArchive"/>
+            android:layout_below="@+id/buttonArchive"
+            android:src="@drawable/ex"
+            android:background="@null"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/buttonPending"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Pending Picturebooks"
             android:layout_below="@+id/buttonExplore"
+            android:layout_marginTop="10dp"
+            android:background="@null"
+            android:src="@drawable/pendingpicturebooks"
+            android:text="Pending Picturebooks"
             android:visibility="invisible"/>
 
     </RelativeLayout>
