--- a/app/src/main/res/layout/activity_new_picturebook.xml
+++ b/app/src/main/res/layout/activity_new_picturebook.xml
@@ -24,12 +24,13 @@
             android:id="@+id/editTextSummary"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textCapSentences"
-            android:minHeight="100dp"
+            android:layout_below="@+id/editTextTitle"
+            android:layout_marginBottom="10dp"
+            android:autofillHints="@string/summary"
             android:gravity="bottom"
             android:hint="@string/summary"
-            android:autofillHints="@string/summary"
-            android:layout_below="@+id/editTextTitle"/>
+            android:inputType="textCapSentences"
+            android:minHeight="100dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewPages"
@@ -43,29 +44,50 @@
             android:id="@+id/buttonAddPage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/recyclerViewPages"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/add_page"
-            android:layout_below="@id/recyclerViewPages"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#b74bc2"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonSavePicturebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/buttonAddPage"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/save"
-            android:layout_below="@id/buttonAddPage"/>
+            android:textColor="#6a1b76"
+            android:textStyle="bold"
+            app:backgroundTint="#fee157"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonDiscardPicturebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/buttonSavePicturebook"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/discard"
-            android:layout_below="@id/buttonSavePicturebook"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#BF0154"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonEditPages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/buttonSavePicturebook"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/edit_pages"
-            android:layout_below="@id/buttonSavePicturebook"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#c788e1"
+            app:cornerRadius="10dp" />
 
     </RelativeLayout>
 
