--- a/app/src/main/res/layout/activity_notification_settings.xml
+++ b/app/src/main/res/layout/activity_notification_settings.xml
@@ -12,14 +12,16 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:id="@+id/settingsRl">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notification Settings"
-            android:textColor="@color/black"
             android:layout_centerHorizontal="true"
+            android:fontFamily="@font/vast_shadow"
+            android:text="Notification Settings"
+            android:textColor="#6a1b76"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -34,7 +36,7 @@
             android:paddingStart="10dp"
             android:paddingTop="10dp"
             android:paddingEnd="10dp"
-            android:text="Push Notifications"/>
+            android:text="Push Notifications" />
 
         <TextView
             android:id="@+id/notficationStatus"
