--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -144,17 +144,27 @@
                 android:id="@+id/buttonSaveEdited"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/rlLastName"
+                android:fontFamily="@font/vast_shadow"
                 android:text="@string/save"
-                android:layout_below="@id/rlLastName"/>
+                android:textColor="#c788e1"
+                android:textStyle="bold"
+                app:backgroundTint="#fee157"
+                app:cornerRadius="10dp" />
 
             <Button
                 android:id="@+id/buttonCancelEdited"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
                 android:layout_below="@id/rlLastName"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/buttonSaveEdited"
-                android:layout_marginLeft="10dp"/>
+                android:fontFamily="@font/vast_shadow"
+                android:text="Cancel"
+                android:textColor="#fee157"
+                android:textStyle="bold"
+                app:backgroundTint="#b74bc2"
+                app:cornerRadius="10dp" />
 
         </RelativeLayout>
 
@@ -162,22 +172,37 @@
             android:id="@+id/buttonChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/relativeLayoutEdit"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/change_password"
-            android:layout_below="@id/relativeLayoutEdit"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#c788e1"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonDeleteAccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/buttonChangePassword"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/delete_account"
-            android:layout_below="@id/buttonChangePassword"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#BF0154"
+            app:cornerRadius="10dp" />
 
         <Button
             android:id="@+id/buttonSignOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/buttonDeleteAccount"
+            android:fontFamily="@font/vast_shadow"
             android:text="@string/sign_out"
-            android:layout_below="@id/buttonDeleteAccount"/>
+            android:textColor="#fee157"
+            android:textStyle="bold"
+            app:backgroundTint="#6a1b76"
+            app:cornerRadius="10dp" />
 
     </RelativeLayout>
 
