--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,18 +22,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:id="@+id/status_tools_selected"/>
+            android:id="@+id/status_tools_selected"
+            android:textColor="#6a1b76"/>
 
         <SeekBar
+            android:id="@+id/seekbar_size"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seekbar_size"/>
+            app:tickMarkTint="#6a1b76" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:id="@+id/status_size"/>
+            android:id="@+id/status_size"
+            android:textColor="#6a1b76"/>
 
     </LinearLayout>
 
